[B]0.7.0[/B]
 - Initial beta release